--- a/index.html
+++ b/index.html
@@ -2,27 +2,69 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Portal de Clientes - Ingetes</title>
+    <title>Portal de Clientes - INGETES</title>
 
-    <!-- React y ReactDOM desde CDN -->
+    <!-- React + ReactDOM desde CDN -->
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-    <!-- Babel para interpretar JSX -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <style>
       body {
         margin: 0;
-        font-family: Arial, sans-serif;
-        background: #f8f8f8;
+        padding: 0;
+        font-family: "Segoe UI", Arial, sans-serif;
+        background-color: #f8f9fa;
+      }
+
+      header {
+        background-color: #00723f;
+        color: white;
+        text-align: center;
+        padding: 20px 0;
+      }
+
+      main {
+        max-width: 900px;
+        margin: 40px auto;
+        background: white;
+        border-radius: 12px;
+        box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
+        padding: 40px;
+      }
+
+      h1 {
+        color: #00723f;
+      }
+
+      button {
+        background-color: #00723f;
+        color: white;
+        border: none;
+        padding: 12px 20px;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 16px;
+        margin-top: 20px;
+      }
+
+      button:hover {
+        background-color: #005f33;
+      }
+
+      footer {
+        text-align: center;
+        color: #555;
+        margin-top: 60px;
+        padding-bottom: 20px;
       }
     </style>
   </head>
+
   <body>
     <div id="root"></div>
 
-    <!-- Aquí cargas tu componente principal -->
+    <!-- Tu componente principal -->
     <script type="text/babel" src="./portada_portal_clientes_ingetes.jsx"></script>
   </body>
 </html>
