--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portal de Clientes - INGETES</title>
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
-    <!-- Carga tu archivo principal -->
-    <script type="text/babel" data-presets="react" src="./portada_portal_clientes_ingetes.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
